lintrunner_target_folder/tests/snapshots/integration_test__simple_linter_fails_on_nonexistent_file.snap
---
source: tests/integration_test.rs
expression: output_lines

---
- "STDOUT:"
- ""
- ""
- "STDERR:"
- "WARNING: No previous init data found. If this is the first time you're running lintrunner, you should run `lintrunner init`."
- "error:        Failed to find provided file: 'blahblahblah'"
- "caused_by:             No such file or directory (os error 2)"

